Added HTTP API check

--- a/conf/webservers.ini
+++ b/conf/webservers.ini
@@ -29,3 +29,9 @@ auth: False
 url: http://127.0.0.1:8080/manager/jmxproxy
 user: foo
 pass: foo
+
+[HTTP]
+upstream: http://your.api.com:8080, https://yoursecure.api.com:8443
+user: netangels
+pass: bololo
+auth: True
