rename of files

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -6,7 +6,7 @@ cluster_name: testcluster
 host_group: testing
 tmpdir: /tmp/oddeye_tmp
 debug_log : False
-puypuy_user : pastor
+run_user : pastor
 max_cache : 50000
 location : east-chulan-1
 
