--- a/conf/hadoop.ini
+++ b/conf/hadoop.ini
@@ -15,13 +15,13 @@ host: 127.0.0.1
 port: 2181
 
 [HBase-Thrift]
-url: http://127.0.0.1:7772/puypuy/read
+url: http://127.0.0.1:7772/oddeye/read
 user: hbase
 class : org.apache.hadoop.hbase.thrift.ThriftServer
 java : /opt/java/bin/java
 
 [HBase-Rest]
-url: http://127.0.0.1:7773/puypuy/read
+url: http://127.0.0.1:7773/oddeye/read
 user: hbase
 class : org.apache.hadoop.hbase.rest.RESTServer
 java : /opt/java/bin/java
