Fixed OddEye URL in configs

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -12,7 +12,7 @@ location : east-chulan-1
 
 [TSDB]
 # --- OddEye --- #
-url: https://barlus.oddeye.co/oddeye-barlus/put/tsdb
+url: https://api.oddeye.co/oddeye-barlus/put/tsdb
 uuid: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 sandbox: False
 err_handler: 2
