--- a/conf/snmp.ini
+++ b/conf/snmp.ini
@@ -1,12 +1,18 @@
 [SNMP]
 auth: True
 port: 161
-server: 127.0.0.1
+server: 192.168.10.11
 authProtocol: SHA
 privProtocol: DES
-SecurityName: user
-AuthPassphrase: AuthpaSS
-PrivPassphrase: ProtopaSS
+SecurityName: demo
+AuthPassphrase: Bb1234567
+PrivPassphrase: Bb1234567
+;server: 192.168.10.2
+;authProtocol: MD5
+;privProtocol: AES128
+;SecurityName: valod
+;AuthPassphrase: Rembo3Rembo4
+;PrivPassphrase: Rembo3Rembo4
 
 ;authProtocol: MD5
 ;authProtocol: SHA
