--- a/conf/snmp.ini
+++ b/conf/snmp.ini
@@ -1,4 +1,4 @@
-[SNMP]
+[linux.router.net]
 auth: True
 port: 161
 server: 192.168.10.11
@@ -7,12 +7,43 @@ privProtocol: DES
 SecurityName: demo
 AuthPassphrase: Bb1234567
 PrivPassphrase: Bb1234567
-;server: 192.168.10.2
-;authProtocol: MD5
-;privProtocol: AES128
-;SecurityName: valod
-;AuthPassphrase: Rembo3Rembo4
-;PrivPassphrase: Rembo3Rembo4
+cpu_user: .1.3.6.1.4.1.2021.11.9.0
+cpu_idle: .1.3.6.1.4.1.2021.11.11.0
+cpu_syetem: .1.3.6.1.4.1.2021.11.10.0
+sys_load_1: .1.3.6.1.4.1.2021.10.1.3.1
+sys_load_5: .1.3.6.1.4.1.2021.10.1.3.2
+sys_load_15: .1.3.6.1.4.1.2021.10.1.3.3
+swap_total: .1.3.6.1.4.1.2021.4.3.0
+swap_available: .1.3.6.1.4.1.2021.4.4.0
+mem_total: .1.3.6.1.4.1.2021.4.5.0
+mem_available: .1.3.6.1.4.1.2021.4.6.0
+mem_free: .1.3.6.1.4.1.2021.4.11.0
+mem_shared: .1.3.6.1.4.1.2021.4.13.0
+mem_buffer: .1.3.6.1.4.1.2021.4.14.0
+mem_cached: .1.3.6.1.4.1.2021.4.15.0
+if_eth0_in_octets: .1.3.6.1.2.1.2.2.1.10.1
+if_eth0_in_errors: .1.3.6.1.2.1.2.2.1.14.1
+if_eth0_out_octets: .1.3.6.1.2.1.2.2.1.16.1
+if_eth0_out_errors: .1.3.6.1.2.1.2.2.1.20.1
+
+[mikrotik.router.net]
+auth: True
+port: 161
+server: 192.168.10.2
+authProtocol: MD5
+privProtocol: AES128
+SecurityName: valod
+AuthPassphrase: Rembo3Rembo4
+PrivPassphrase: Rembo3Rembo4
+total_memory: .1.3.6.1.2.1.25.2.3.1.5.65536
+used_memory: .1.3.6.1.2.1.25.2.3.1.6.65536
+cpu_frequency: .1.3.6.1.4.1.14988.1.1.3.14.0
+tx_rate: .1.3.6.1.4.1.14988.1.1.1.3.1.2.6
+rx_rate: .1.3.6.1.4.1.14988.1.1.1.3.1.3.6
+client_count: .1.3.6.1.4.1.14988.1.1.1.3.1.6.6
+frequency: .1.3.6.1.4.1.14988.1.1.1.3.1.7.6
+noise_floor: .1.3.6.1.4.1.14988.1.1.1.3.1.9.6
+overall_ccq: .1.3.6.1.4.1.14988.1.1.1.3.1.10.6
 
 ;authProtocol: MD5
 ;authProtocol: SHA
