--- a/conf/snmp.ini
+++ b/conf/snmp.ini
@@ -32,9 +32,9 @@ port: 161
 server: 192.168.10.2
 authProtocol: MD5
 privProtocol: AES128
-SecurityName: valod
-AuthPassphrase: Rembo3Rembo4
-PrivPassphrase: Rembo3Rembo4
+SecurityName: demo
+AuthPassphrase: Bb1234567
+PrivPassphrase: Bb1234567
 total_memory: .1.3.6.1.2.1.25.2.3.1.5.65536
 used_memory: .1.3.6.1.2.1.25.2.3.1.6.65536
 cpu_frequency: .1.3.6.1.4.1.14988.1.1.3.14.0
