--- a/conf/webservers.ini
+++ b/conf/webservers.ini
@@ -25,6 +25,14 @@ user: netangels
 pass: bololo
 auth: False
 
+[Lighttpd]
+address: http://127.0.0.1
+stats: /server-status?auto
+auth: False
+user: netangels
+pass: bololo
+
+
 [Tomcat]
 url: http://127.0.0.1:8080/manager/jmxproxy
 user: foo
