--- a/conf/mq.ini
+++ b/conf/mq.ini
@@ -7,6 +7,13 @@ queue_details: True
 user: admin
 pass: admin
 
+[RabbitMQ 3.6]
+stats: http://127.0.0.1:15672
+queue_details: True
+desired_queues: nabazdak1, nabazdak2
+user: admin
+pass: admin
+
 [ActiveMQ]
 stats: http://127.0.0.1:8161/api/jolokia/read
 brokername: localhost
