Added log file rotation

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,14 +1,17 @@
 [SelfConfig]
-check_period_seconds: 5
-log_file: /tmp/puypuy.log
+check_period_seconds: 10
 pid_file: /tmp/puypuy.pid
+log_file: /tmp/puypuy.log
+log_rotate_seconds: 3600
+log_rotate_backups: 24
 cluster_name: testcluster
 host_group: testing
 tmpdir: /tmp/oddeye_tmp
 debug_log : False
-run_user : pastor
+run_user : nobody
 max_cache : 50000
 location : east-chulan-1
+
 
 [TSDB]
 # --- OddEye --- #
