Improvements and bug fixes

--- a/conf/system.ini
+++ b/conf/system.ini
@@ -5,3 +5,9 @@ du_high : 80
 du_severe : 90
 memory_high : 85
 memory_severe : 95
+
+[CPU Stats]
+static_alerts: True
+per_cpu: False
+warn_level: 90
+crit_level: 95
