--- a/conf/webservers.ini
+++ b/conf/webservers.ini
@@ -32,11 +32,13 @@ auth: False
 user: netangels
 pass: bololo
 
-
 [Tomcat]
 url: http://127.0.0.1:8080/manager/jmxproxy
 user: foo
 pass: foo
+
+[Jetty]
+stats: http://127.0.0.1:8080/jolokia/read
 
 [HTTP]
 upstream: http://your.api.com:8080, https://yoursecure.api.com:8443
