major upgrades and improvements

--- a/conf/bigdata.ini
+++ b/conf/bigdata.ini
@@ -1,15 +1,15 @@
 [ElasticSearch]
-host: http://127.0.0.1:9200
+host: http://es1xx:9200
 stats: /_nodes/_local/stats/?all=true
-;host: http://127.0.0.1:9200
+;host: http://es2x5:9200
 ;stats: /_nodes/_local/stats
 
 [Riak]
 stats: http://127.0.0.1:8098/stats
 
 [Cassandra]
-;jolokia: http://127.0.0.1:7777/jolokia/read
-jolokia: http://127.0.0.1:7777/jolokia/read
+;jolokia: http://cassandra3xx:7777/jolokia/read
+jolokia: http://cassandra2.1xx:7777/jolokia/read
 
 [Ceph]
 client: client.admin
@@ -17,18 +17,35 @@ keyring: /etc/ceph/ceph.client.admin.keyring
 
 [Storm]
 host: 127.0.0.1
-port: 46700,46701
+port: 46700
 path: /jolokia/read
+
+[Storm-API]
+host: 127.0.0.1
+port: 8080
+perspout: True
+perbolt: True
 
 [CouchBase]
 stats: http://127.0.0.1:8091/pools/default/buckets
 buckets : default
 
+[CouchBase5x]
+stats: http://127.0.0.1:8091/pools/default/buckets
+buckets : beer-sample, gamesim-sample, travel-sample
+user: admin
+pass: adminadmin
+auth: True
+
 [CouchDB]
 stats: http://127.0.0.1:5984/_stats
 
-[Mesos-Slave]
-stats: http://127.0.0.1:5051/metrics/snapshot
+[CouchDB2]
+stats: http://127.0.0.1:5984
+user: admin
+pass: admin
+auth: True
+detailed = False
 
 [Mesos-Master]
 stats: http://127.0.0.1:5050/metrics/snapshot
