--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,22 +1,21 @@
 [SelfConfig]
 check_period_seconds: 10
-pid_file: /tmp/puypuy.pid
-log_file: /tmp/puypuy.log
+log_file: /oddeye/puypuy.log
 log_rotate_seconds: 3600
 log_rotate_backups: 24
+pid_file: /tmp/oddeye.pid
 cluster_name: testcluster
 host_group: testing
 tmpdir: /tmp/oddeye_tmp
 debug_log : False
-run_user : nobody
+run_user : pastor
 max_cache : 50000
-location : east-chulan-1
-
+location : east-chulan-2
 
 [TSDB]
 # --- OddEye --- #
-url: https://api.oddeye.co/oddeye-barlus/put/tsdb
-uuid: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+url: https://api./oddeye-barlus/put/tsdb
+uuid: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
 sandbox: False
 err_handler: 2
 tsdtype: OddEye
