--- a/conf/hadoop.ini
+++ b/conf/hadoop.ini
@@ -1,14 +1,14 @@
 [HBase-Region]
-jmx: http://127.0.0.1:60030/jmx
+jmx: http://127.0.0.10.:60030/jmx
 
 [HBase-Master]
-jmx: http://127.0.0.1:60010/jmx
+jmx: http://127.0.0.1.:60010/jmx
 
 [Hadoop-Datanode]
-j:mx: http://127.0.0.1:50075/jmx
+jmx: http://127.0.0.1.:50075/jmx
 
 [Hadoop-NameNode]
-jmx: http://127.0.0.1:50070/jmx
+jmx: http://127.0.0.1.:50070/jmx
 
 [ZooKeeper]
 host: 127.0.0.1
@@ -21,7 +21,7 @@ class : org.apache.hadoop.hbase.thrift.ThriftServer
 java : /opt/java/bin/java
 
 [HBase-Rest]
-url: http://127.0.0.1:7773/oddeye/read
+url: http://127.0.0.1:7777/oddeye/read
 user: hbase
 class : org.apache.hadoop.hbase.rest.RESTServer
 java : /opt/java/bin/java
