--- a/conf/java.ini
+++ b/conf/java.ini
@@ -1,5 +1,5 @@
 [Jolokia]
-jolokia: http://127.0.0.1:8888/jolokia-war-1.3.5/read
+jolokia: http://127.0.0.1:8888/jolokia/read
 
 [JMX]
 jmx: http://127.0.0.1:7771/oddeye/read
