--- a/conf/mq.ini
+++ b/conf/mq.ini
@@ -10,7 +10,7 @@ pass: admin
 [RabbitMQ 3.6]
 stats: http://127.0.0.1:15672
 queue_details: True
-desired_queues: nabazdak1, nabazdak2
+desired_queues: beer-queue, deer-queue, bear-queue
 user: admin
 pass: admin
 
