--- a/conf/webservers.ini
+++ b/conf/webservers.ini
@@ -17,13 +17,21 @@ url: http://127.0.0.1/haproxy?stats;csv
 user: netangels
 pass: bololo
 auth: True
-upstream: app1,app2
+upstream: app,opolo
 
 [Apache]
-url: http://127.0.0.1:8080/server-status?auto
+url: http://127.0.0.1/server-status?auto
 user: netangels
 pass: bololo
 auth: False
+
+[Tomcat]
+url: http://127.0.0.1:8080/manager/jmxproxy
+user: foo
+pass: foo
+
+[Jetty]
+stats: http://127.0.0.1:8888/jolokia/read
 
 [Lighttpd]
 address: http://127.0.0.1
@@ -32,16 +40,8 @@ auth: False
 user: netangels
 pass: bololo
 
-[Tomcat]
-url: http://127.0.0.1:8080/manager/jmxproxy
-user: foo
-pass: foo
-
-[Jetty]
-stats: http://127.0.0.1:8080/jolokia/read
-
 [HTTP]
-upstream: http://your.api.com:8080, https://yoursecure.api.com:8443
+upstream: http://127.0.0.1:9200, http://127.0.0.2:9200, http://127.0.0.1/haproxy?stats;csv
 user: netangels
 pass: bololo
 auth: True
