--- a/conf/snmp.ini
+++ b/conf/snmp.ini
@@ -1,7 +1,7 @@
 [linux.router.net]
 auth: True
 port: 161
-server: 192.168.10.11
+server: 192.168.1.11
 authProtocol: SHA
 privProtocol: DES
 SecurityName: demo
@@ -29,12 +29,12 @@ if_eth0_out_errors: .1.3.6.1.2.1.2.2.1.20.1
 [mikrotik.router.net]
 auth: True
 port: 161
-server: 192.168.10.2
+server: 192.168.1.2
 authProtocol: MD5
 privProtocol: AES128
-SecurityName: demo
-AuthPassphrase: Bb1234567
-PrivPassphrase: Bb1234567
+SecurityName: valod
+AuthPassphrase: bololo
+PrivPassphrase: bololo
 total_memory: .1.3.6.1.2.1.25.2.3.1.5.65536
 used_memory: .1.3.6.1.2.1.25.2.3.1.6.65536
 cpu_frequency: .1.3.6.1.4.1.14988.1.1.3.14.0
@@ -44,11 +44,3 @@ client_count: .1.3.6.1.4.1.14988.1.1.1.3.1.6.6
 frequency: .1.3.6.1.4.1.14988.1.1.1.3.1.7.6
 noise_floor: .1.3.6.1.4.1.14988.1.1.1.3.1.9.6
 overall_ccq: .1.3.6.1.4.1.14988.1.1.1.3.1.10.6
-
-;authProtocol: MD5
-;authProtocol: SHA
-;privProtocol: DES
-;privProtocol: 3DES
-;privProtocol: AES128
-;privProtocol: AES192
-;privProtocol: AES256
