--- a/conf/system.ini
+++ b/conf/system.ini
@@ -1,13 +1,24 @@
-[System Thresholds]
-load_high: 90
-load_severe : 100
-du_high : 80
-du_severe : 90
-memory_high : 85
-memory_severe : 95
+[Load Average]
+static_enabled: True
+high: 95
+severe : 100
+
+[Disk Stats]
+static_enabled: True
+high : 90
+severe : 95
+
+[Memory Stats]
+static_enabled: True
+high : 90
+severe : 95
 
 [CPU Stats]
-static_alerts: True
-per_cpu: True
-warn_level: 90
-crit_level: 95
+static_enabled: True
+percore_stats: True
+high: 90
+severe: 95
+
+[Network Stats]
+localhost = False
+rated = True
