--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,5 +1,6 @@
 [SelfConfig]
 check_period_seconds: 10
+error_handler: 2
 log_file: /oddeye/puypuy.log
 log_rotate_seconds: 3600
 log_rotate_backups: 24
@@ -17,7 +18,6 @@ location : east-chulan-2
 url: https://api./oddeye-barlus/put/tsdb
 uuid: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
 sandbox: False
-err_handler: 2
 tsdtype: OddEye
 
 # --- InfluxDB --- #
