--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,7 +1,7 @@
 [SelfConfig]
 check_period_seconds: 10
 error_handler: 2
-log_file: /oddeye/puypuy.log
+log_file: /tmp/oddeye.log
 log_rotate_seconds: 3600
 log_rotate_backups: 24
 pid_file: /tmp/oddeye.pid
@@ -9,13 +9,13 @@ cluster_name: testcluster
 host_group: testing
 tmpdir: /tmp/oddeye_tmp
 debug_log : False
-run_user : pastor
+run_user : nobody
 max_cache : 50000
-location : east-chulan-2
+location : east-west-2
 
 [TSDB]
 # --- OddEye --- #
-url: https://api./oddeye-barlus/put/tsdb
+url: https://api.oddeye.co/oddeye-barlus/put/tsdb
 uuid: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
 sandbox: False
 tsdtype: OddEye
