Hadoop Namenode update

--- a/conf/hadoop.ini
+++ b/conf/hadoop.ini
@@ -9,6 +9,8 @@ jmx: http://127.0.0.1.:50075/jmx
 
 [Hadoop-NameNode]
 jmx: http://127.0.0.1.:50070/jmx
+folders : None
+;folders : /hbase/data/default/table1, /hbase/data/default/table2, /hbase/data/default/table3
 
 [ZooKeeper]
 host: 127.0.0.1
