Hadoop Namenode update

--- a/conf/hadoop.ini
+++ b/conf/hadoop.ini
@@ -10,7 +10,10 @@ jmx: http://127.0.0.1.:50075/jmx
 [Hadoop-NameNode]
 jmx: http://127.0.0.1.:50070/jmx
 folders : None
-;folders : /hbase/data/default/table1, /hbase/data/default/table2, /hbase/data/default/table3
+
+[HDFS-Directory]
+namenodes: http://hname1.domain.local:50070, http://hname2.domain.local:50070
+folders : /hbase/data/default/table1, /hbase/data/default/table2, /hbase/data/default/table3
 
 [ZooKeeper]
 host: 127.0.0.1
