--- a/conf/sql_cache.ini
+++ b/conf/sql_cache.ini
@@ -2,6 +2,9 @@
 host: 127.0.0.1
 user: netangels
 pass: bololo
+advanced : False
+custom_query: {"name_1": "SELECT COUNT(*) FROM test.abc", "name_2": "SELECT title FROM test.xyz ORDER BY id DESC LIMIT 1"}
+
 
 [MongoDB]
 host: 127.0.0.1
