Added check for LizardFS

--- a/conf/bigdata.ini
+++ b/conf/bigdata.ini
@@ -15,6 +15,12 @@ jolokia: http://cassandra2.1xx:7777/jolokia/read
 client: client.admin
 keyring: /etc/ceph/ceph.client.admin.keyring
 
+[LizardFS]
+host: 127.0.0.1
+port: 9421
+chunkstats: True
+diskstats: True
+
 [Storm]
 host: 127.0.0.1
 port: 46700
