--- a/conf/bigdata.ini
+++ b/conf/bigdata.ini
@@ -63,3 +63,6 @@ stats: http://127.0.0.1:7777/jolokia/read
 
 [Spark-Worker]
 stats: http://127.0.0.1:7778/jolokia/read
+
+[FoundationDB]
+fdbclipath: /usr/bin/fdbcli
