--- a/conf/webservers.ini
+++ b/conf/webservers.ini
@@ -45,3 +45,7 @@ upstream: http://127.0.0.1:9200, http://127.0.0.2:9200, http://127.0.0.1/haproxy
 user: netangels
 pass: bololo
 auth: True
+
+[Varnish]
+varnishstat: /usr/bin/varnishstat
+varnishuser: varnish
