Refactor of HBase REST and Thrift checks

--- a/conf/hadoop.ini
+++ b/conf/hadoop.ini
@@ -20,13 +20,7 @@ host: 127.0.0.1
 port: 2181
 
 [HBase-Thrift]
-url: http://127.0.0.1:7772/oddeye/read
-user: hbase
-class : org.apache.hadoop.hbase.thrift.ThriftServer
-java : /opt/java/bin/java
+jmx : http://127.0.0.1:9095/jmx
 
 [HBase-Rest]
-url: http://127.0.0.1:7777/oddeye/read
-user: hbase
-class : org.apache.hadoop.hbase.rest.RESTServer
-java : /opt/java/bin/java
+jmx : http://127.0.0.1:9095/jmx
