--- a/conf/bigdata.ini
+++ b/conf/bigdata.ini
@@ -55,6 +55,9 @@ detailed = False
 [Mesos-Master]
 stats: http://127.0.0.1:5050/metrics/snapshot
 
+[Mesos-Slave]
+stats: http://127.0.0.1:5051/metrics/snapshot
+
 [Solr]
 stats: http://127.0.0.1:8983/solr/admin/metrics?group=all&wt=json
 
