--- a/conf/hashicorp.ini
+++ b/conf/hashicorp.ini
@@ -6,3 +6,10 @@ jobstats: True
 telemetery: http://127.0.0.1:8500/v1/agent/metrics
 detailed: True
 getrates: True
+
+[Hashicorp-Vault]
+telemetery: http://127.0.0.1:8200/v1/sys/metrics
+token: s.HqQb7CFNBT1wHWLHD0DrOx6P
+detailed: True
+getrates: False
+
