--- a/conf/bigdata.ini
+++ b/conf/bigdata.ini
@@ -1,8 +1,6 @@
 [ElasticSearch]
-host: http://es1xx:9200
-stats: /_nodes/_local/stats/?all=true
-;host: http://es2x5:9200
-;stats: /_nodes/_local/stats
+host: http://es2x5:9200
+stats: /_nodes/_local/stats
 
 [Riak]
 stats: http://127.0.0.1:8098/stats
