Added new check for Envoy proxy-balancer

--- a/conf/k8s.ini
+++ b/conf/k8s.ini
@@ -4,3 +4,6 @@ metrics : http://127.0.0.1:2379/metrics
 [coredns]
 metrics : http://127.0.0.1:9253/metrics
 
+[kube-state-metrics]
+metrics : http://127.0.0.1:6868/metrics
+podinfo : True
