--- a/conf/bigdata.ini
+++ b/conf/bigdata.ini
@@ -61,3 +61,6 @@ stats: http://127.0.0.1:7778/jolokia/read
 
 [FoundationDB]
 fdbclipath: /usr/bin/fdbcli
+
+[Scilla]
+stats : http://127.0.0.1:9180/metrics
