added support influxdb2 datastore

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -29,6 +29,13 @@ tsdtype: OddEye
 ;database: test
 ;tsdtype: InfluxDB
 
+# --- InfluxDB2 --- #
+;address: http://127.0.0.1:8086
+;tsdtype: InfluxDB2
+;organization: netangels
+;bucket: netangels
+;token: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 # --- OpenTSDB --- #
 ;address: http://127.0.0.1:4242
 ;datapoints: /api/put
