ElasticSearch ThreadPool stats

--- a/conf/bigdata.ini
+++ b/conf/bigdata.ini
@@ -1,6 +1,7 @@
 [ElasticSearch]
 host: http://es2x5:9200
 stats: /_nodes/_local/stats
+threadpoolstats: no
 
 [Riak]
 stats: http://127.0.0.1:8098/stats
