Rename and reconfigure, add Nagios

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -14,6 +14,11 @@ max_cache : 50000
 location : east-west-2
 shorthostname : no
 
+[WebServer]
+webserver: no
+webaddress: 0.0.0.0:9898
+apikey: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
+
 [TSDB]
 # --- OddEye --- #
 url: https://api.oddeye.co/oddeye-barlus/put/tsdb
