Prometheus support and many more

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -20,6 +20,9 @@ webaddress: 0.0.0.0:9898
 apikey: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
 
 [TSDB]
+
+;tsdtype: Prometheus
+
 # --- OddEye --- #
 url: https://api.oddeye.co/oddeye-barlus/put/tsdb
 uuid: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
