--- a/conf/system.ini
+++ b/conf/system.ini
@@ -20,5 +20,10 @@ high: 90
 severe: 95
 
 [Network Stats]
-localhost = False
-rated = True
+localhost : False
+rated : True
+
+[Open Files]
+regionserver : /tmp/hbase-hbase-regionserver.pid
+datanode : /tmp/hadoop-hdfs-datanode.pid
+nodemanager : /tmp/hadoop-yarn-nodemanager.pid
