--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,13 +1,13 @@
 [SelfConfig]
 check_period_seconds: 20
 error_handler: 2
-log_file: /tmp/oddeye.log
+log_file: /tmp/puypuy.log
 log_rotate_seconds: 3600
 log_rotate_backups: 24
-pid_file: /tmp/oddeye.pid
+pid_file: /tmp/puypuy.pid
 cluster_name: testcluster
 host_group: testing
-tmpdir: /tmp/oddeye_tmp
+tmpdir: /tmp/puypuy_tmp
 debug_log : False
 run_user : nobody
 max_cache : 50000
@@ -22,12 +22,6 @@ apikey: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
 [TSDB]
 
 ;tsdtype: Prometheus
-
-# --- OddEye --- #
-url: https://api.oddeye.co/oddeye-barlus/put/tsdb
-uuid: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
-sandbox: False
-tsdtype: OddEye
 
 # --- InfluxDB --- #
 ;address: http://127.0.0.1:8086
