--- a/conf/java.ini
+++ b/conf/java.ini
@@ -2,7 +2,7 @@
 jolokia: http://127.0.0.1:8888/jolokia/read
 
 [JMX]
-jmx: http://127.0.0.1:7771/oddeye/read
+jmx: http://127.0.0.1:7771/puypuy/read
 user: tomcat
 class : org.apache.catalina.startup.Bootstrap
 java : /opt/java/bin/java
