--- a/conf/system.ini
+++ b/conf/system.ini
@@ -24,6 +24,7 @@ localhost : False
 rated : True
 
 [Open Files]
-regionserver : /tmp/hbase-hbase-regionserver.pid
+regionserver : /var/run/crond.pid
 datanode : /tmp/hadoop-hdfs-datanode.pid
 nodemanager : /tmp/hadoop-yarn-nodemanager.pid
+nginx : nginx
