--- a/conf/loadbalancer.ini
+++ b/conf/loadbalancer.ini
@@ -9,3 +9,6 @@ metrics : http://127.0.0.1:8001/stats/prometheus
 
 [Traefik]
 metrics : http://127.0.0.1:8081/metrics
+
+[Gazan]
+metrics : http://127.0.0.1:3000/metrics
