--- a/conf/system.ini
+++ b/conf/system.ini
@@ -24,7 +24,8 @@ localhost : False
 rated : True
 
 [Open Files]
-regionserver : /var/run/crond.pid
-datanode : /tmp/hadoop-hdfs-datanode.pid
-nodemanager : /tmp/hadoop-yarn-nodemanager.pid
-nginx : nginx
+#regionserver : /var/run/crond.pid
+#datanode : /tmp/hadoop-hdfs-datanode.pid
+#nodemanager : /tmp/hadoop-yarn-nodemanager.pid
+#nginx : nginx
+gazan : gazan-glibc
