Webserver alow ip

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -18,6 +18,7 @@ shorthostname : no
 webserver: no
 webaddress: 0.0.0.0:9898
 apikey: xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxx
+allowedip: 127.0.0.1,192.168.1.1
 
 [TSDB]
 
