--- a/conf/loadbalancer.ini
+++ b/conf/loadbalancer.ini
@@ -10,5 +10,5 @@ metrics : http://127.0.0.1:8001/stats/prometheus
 [Traefik]
 metrics : http://127.0.0.1:8081/metrics
 
-[Gazan]
+[Aralez]
 metrics : http://127.0.0.1:3000/metrics
